# blagovesti_tv_playlist

fastapi-ffplayout/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  create_mock_data.py  exampleGeneratedFile.json  pyproject.toml  requirements.txt  test_gen.py
fastapi-ffplayout/app/: main.py
fastapi-ffplayout/app/api/: dependencies.py  routes.py
fastapi-ffplayout/app/core/: config.py  scheduler_config.py
fastapi-ffplayout/app/models/: schemas.py
fastapi-ffplayout/app/services/: playlist_generator.py  scanner.py  storage.py
fastapi-ffplayout/app/utils/: fileutils.py
fastapi-ffplayout/test_output/: test_playlist.json
