[project]
name = "fastapi-ffplayout"
version = "0.1.0"
description = "A FastAPI application for generating video playlists based on fixed schedules and categories."
authors = [
    {name = "Zoran Janjic", email = "janjiczoran23@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "watchdog",
    "python-multipart",
    "aiofiles",
    "ffmpeg-python"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"